Fix spacing in header

--- a/source/_assets/stylesheets/tomdiggle/layout/_header.scss
+++ b/source/_assets/stylesheets/tomdiggle/layout/_header.scss
@@ -12,7 +12,7 @@
 
 .site-branding {
     @at-root #{&}__name {
-        margin: .6em 0 0;
+        margin: .2em 0;
         font-family: $museo-500;
         font-size: modular-scale(3);
     }
